# trackid

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/trackid/: __init__.py  audio.py  cli.py  config.py  identify.py  utils.py
tests/: __init__.py  conftest.py  test_audio.py  test_identify.py  test_utils.py
